# super-cereal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  sourcery.yml  test.yml
super_cereal/cerealizer/: __init__.py  avro.py  builtins.py  encryption.py  json.py
tests/super_cereal/cerealizer/: test_avro.py  test_encryption.py  test_json.py
