[tool.poetry]
name = "simple-serialization"
version = "0.1.0"
description = ""
authors = ["Sean Freitag <sean.freitag@avant.com>"]
readme = "README.md"
#packages = [{ include = "simple_serialization" }]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
sourcery-cli = "^1.0.3"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
