[tool.poetry]
name = "simple-serialization"
version = "0.1.0"
description = "Serialize Python objects"
authors = ["Sean Freitag <sean.freitag@avant.com>"]
maintainers = ["Sean Freitag <sean.freitag@avant.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "super_cereal" }]
repository = "https://github.com/cowboygneox/super-cereal"
keywords = ["serialization", "deserialization", "json"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
sourcery-cli = "^1.0.3"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
